chore: enable Vercel Web Analytics (insights script)

--- a/index.html
+++ b/index.html
@@ -1977,5 +1977,11 @@
       suggest.forEach(chip => chip.addEventListener('click', () => { if (!input) return; input.value = chip.getAttribute('data-q') || ''; input.focus(); }));
     })();
   </script>
+  
+  <!-- Vercel Web Analytics -->
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments) }
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
