--- a/index.html
+++ b/index.html
@@ -113,25 +113,6 @@
         font-weight: 500;
       }
 
-      .contact {
-        margin: 10px 0 0;
-        font-size: 0.92rem;
-        color: var(--muted);
-        font-style: normal;
-        line-height: 1.7;
-        overflow-wrap: anywhere;
-      }
-
-      .contact a {
-        color: inherit;
-        text-decoration: none;
-        border-bottom: 1px solid transparent;
-      }
-
-      .contact a:hover {
-        border-bottom-color: currentColor;
-      }
-
       main {
         flex: 1;
       }
@@ -147,13 +128,15 @@
         letter-spacing: 0.12em;
         text-transform: uppercase;
         color: var(--muted);
-        text-align: left;
+        text-align: center;
       }
 
       ul {
-        margin: 0;
+        margin: 0 auto;
         padding-left: 1.15rem;
         text-align: left;
+        display: inline-block;
+        max-width: 42rem;
       }
 
       li {
@@ -164,7 +147,7 @@
         display: flex;
         gap: 12px;
         flex-wrap: wrap;
-        justify-content: flex-start;
+        justify-content: center;
       }
 
       @media (max-width: 520px) {
@@ -273,15 +256,6 @@
           <img class="avatar" src="/vir2.png" alt="Vir Sanghavi" />
           <h1>VIR SANGHAVI</h1>
           <p class="subtitle">Founder &amp; Engineer</p>
-
-          <address class="contact">
-            <a href="mailto:Virrsanghavi@gmail.com">Virrsanghavi@gmail.com</a><br />
-            <a href="tel:+18329074410">+1 (832) 907-4410</a><br />
-            <a href="https://github.com/VirSanghavi" target="_blank" rel="noreferrer">github.com/VirSanghavi</a><br />
-            <a href="https://linkedin.com/in/vir-sanghavi" target="_blank" rel="noreferrer">linkedin.com/in/vir-sanghavi</a><br />
-            <a href="https://instagram.com/vir.sanghavi13" target="_blank" rel="noreferrer">instagram.com/vir.sanghavi13</a><br />
-            <a href="https://x.com/virsanghavi13" target="_blank" rel="noreferrer">x.com/virsanghavi13</a>
-          </address>
         </header>
 
         <main>
@@ -323,7 +297,32 @@
         </main>
 
         <footer>
-          <nav class="social" aria-label="Social links">
+          <nav class="social" aria-label="Links">
+            <a href="mailto:Virrsanghavi@gmail.com" aria-label="Email">
+              <span class="sr-only">Email</span>
+              <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                <path d="M4 6.75h16v10.5H4V6.75Z" stroke="currentColor" stroke-width="1.6" />
+                <path
+                  d="M4.8 7.3 12 12.6 19.2 7.3"
+                  stroke="currentColor"
+                  stroke-width="1.6"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </a>
+            <a href="tel:+18329074410" aria-label="Phone">
+              <span class="sr-only">Phone</span>
+              <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                <path
+                  d="M9.2 5.3 7.9 6.6c-.6.6-.8 1.5-.4 2.3 1.1 2.3 3 4.2 5.3 5.3.8.4 1.7.2 2.3-.4l1.3-1.3c.5-.5 1.2-.6 1.9-.3l2 .9c.9.4 1.3 1.5.9 2.4l-.8 1.9c-.3.7-1 1.2-1.8 1.2-8 0-14.5-6.5-14.5-14.5 0-.8.5-1.5 1.2-1.8l1.9-.8c.9-.4 2 0 2.4.9l.9 2c.3.7.2 1.4-.3 1.9Z"
+                  stroke="currentColor"
+                  stroke-width="1.35"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </a>
             <a href="https://linkedin.com/in/vir-sanghavi" target="_blank" rel="noreferrer" aria-label="LinkedIn">
               <span class="sr-only">LinkedIn</span>
               <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
