--- a/index.html
+++ b/index.html
@@ -260,11 +260,9 @@
 
         <main>
           <section class="section" aria-labelledby="background">
-            <h2 id="background">Background</h2>
             <ul>
               <li>
-                Founder and CEO of Tilt, a real-time debate and decision platform with 5,000+ users
-                across 6 continents
+                Founder and CEO of <a href="https://data.tilt.vote" target="_blank" rel="noreferrer">Tilt</a>, an enterprise and consumer-facing real-time debate and decision platform with 5,000+ users and 2 B2B pilots.
               </li>
               <li>
                 Founder and Executive Director of
@@ -272,12 +270,10 @@
                 a nonprofit expanding STEM access through robotics donations and education
               </li>
               <li>Built and deployed production-grade web and data systems end to end</li>
-              <li>Carnegie Vanguard High School, Class of 2028 with 4.00 unweighted GPA</li>
             </ul>
           </section>
 
           <section class="section" aria-labelledby="recognition">
-            <h2 id="recognition">Recognition</h2>
             <ul>
               <li>
                 Accepted to Antler US Residency F25 with under 3 percent acceptance rate and
@@ -285,14 +281,6 @@
               </li>
               <li>YC Agent Jam 25 third place, in-person competition at Y Combinator SF</li>
             </ul>
-          </section>
-
-          <section class="section" aria-labelledby="selected-work">
-            <h2 id="selected-work">Selected Work</h2>
-            <div class="links-row">
-              <a class="btn" href="https://tilt.vote" target="_blank" rel="noreferrer">Tilt</a>
-              <a class="btn" href="https://linkedin.com/in/vir-sanghavi" target="_blank" rel="noreferrer">LinkedIn</a>
-            </div>
           </section>
         </main>
 
