--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       }
 
       .section {
-        margin-top: 26px;
+        margin-top: 0;
       }
 
       h2 {
@@ -137,6 +137,10 @@
         text-align: left;
         display: inline-block;
         max-width: 42rem;
+      }
+
+      .section + .section {
+        margin-top: 10px;
       }
 
       li {
@@ -259,7 +263,7 @@
         </header>
 
         <main>
-          <section class="section" aria-labelledby="background">
+          <section class="section">
             <ul>
               <li>
                 Founder and CEO of <a href="https://data.tilt.vote" target="_blank" rel="noreferrer">Tilt</a>, an enterprise and consumer-facing real-time debate and decision platform with 5,000+ users and 2 B2B pilots.
@@ -270,15 +274,8 @@
                 a nonprofit expanding STEM access through robotics donations and education
               </li>
               <li>Built and deployed production-grade web and data systems end to end</li>
-            </ul>
-          </section>
-
-          <section class="section" aria-labelledby="recognition">
-            <ul>
-              <li>
                 Accepted to Antler US Residency F25 with under 3 percent acceptance rate and
-                potential 500K funding
-              </li>
+                potential 500K funding</li>
               <li>YC Agent Jam 25 third place, in-person competition at Y Combinator SF</li>
             </ul>
           </section>
@@ -313,31 +310,10 @@
             </a>
             <a href="https://linkedin.com/in/vir-sanghavi" target="_blank" rel="noreferrer" aria-label="LinkedIn">
               <span class="sr-only">LinkedIn</span>
-              <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
                 <path
-                  d="M6.5 9.5V18"
-                  stroke="currentColor"
-                  stroke-width="1.7"
-                  stroke-linecap="round"
-                />
-                <path
-                  d="M6.5 6.5h.01"
-                  stroke="currentColor"
-                  stroke-width="3"
-                  stroke-linecap="round"
-                />
-                <path
-                  d="M10 18v-4.2c0-1.5.8-2.4 2.1-2.4 1.25 0 1.9.85 1.9 2.4V18"
-                  stroke="currentColor"
-                  stroke-width="1.7"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M10 9.5v8.5"
-                  stroke="currentColor"
-                  stroke-width="1.7"
-                  stroke-linecap="round"
+                  fill="currentColor"
+                  d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5ZM.22 23.5h4.56V7.98H.22V23.5ZM8.02 7.98H12.4v2.12h.06c.61-1.16 2.1-2.38 4.32-2.38 4.62 0 5.48 3.04 5.48 6.99v8.78h-4.56v-7.79c0-1.86-.03-4.25-2.59-4.25-2.59 0-2.99 2.02-2.99 4.11v7.93H8.02V7.98Z"
                 />
               </svg>
             </a>
