--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           <section class="section">
             <ul>
               <li>
-                Founder and CEO of <a href="https://data.tilt.vote" target="_blank" rel="noreferrer">Tilt</a>, an enterprise and consumer-facing real-time debate and decision platform with 5,000+ users and 2 B2B pilots.
+                CEO/Co-founder @ <a href="https://data.tilt.vote" target="_blank" rel="noreferrer">Tilt</a>, an enterprise and consumer-facing real-time debate and decision platform with 5,000+ users and 2 B2B pilots.
               </li>
               <li>
                 Founder and Executive Director of
@@ -310,10 +310,31 @@
             </a>
             <a href="https://linkedin.com/in/vir-sanghavi" target="_blank" rel="noreferrer" aria-label="LinkedIn">
               <span class="sr-only">LinkedIn</span>
-              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+              <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
                 <path
-                  fill="currentColor"
-                  d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5ZM.22 23.5h4.56V7.98H.22V23.5ZM8.02 7.98H12.4v2.12h.06c.61-1.16 2.1-2.38 4.32-2.38 4.62 0 5.48 3.04 5.48 6.99v8.78h-4.56v-7.79c0-1.86-.03-4.25-2.59-4.25-2.59 0-2.99 2.02-2.99 4.11v7.93H8.02V7.98Z"
+                  d="M7.2 9.6V17.4"
+                  stroke="currentColor"
+                  stroke-width="1.6"
+                  stroke-linecap="round"
+                />
+                <path
+                  d="M7.2 6.9h.01"
+                  stroke="currentColor"
+                  stroke-width="3"
+                  stroke-linecap="round"
+                />
+                <path
+                  d="M11 17.4v-4.2c0-1.5.85-2.45 2.25-2.45 1.35 0 2.05.9 2.05 2.45v4.2"
+                  stroke="currentColor"
+                  stroke-width="1.6"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M11 9.6v7.8"
+                  stroke="currentColor"
+                  stroke-width="1.6"
+                  stroke-linecap="round"
                 />
               </svg>
             </a>
