--- a/index.html
+++ b/index.html
@@ -133,10 +133,15 @@
 
       ul {
         margin: 0 auto;
-        padding-left: 1.15rem;
-        text-align: left;
-        display: inline-block;
+        padding-left: 0;
+        list-style-position: inside;
+        text-align: center;
+        display: block;
         max-width: 42rem;
+      }
+
+      .icon-img {
+        object-fit: contain;
       }
 
       .section + .section {
@@ -266,16 +271,18 @@
           <section class="section">
             <ul>
               <li>
-                CEO/Co-founder @ <a href="https://data.tilt.vote" target="_blank" rel="noreferrer">Tilt</a>, an enterprise and consumer-facing real-time debate and decision platform with 5,000+ users and 2 B2B pilots.
+                CEO/co-founder @ <a href="https://data.tilt.vote" target="_blank" rel="noreferrer">Tilt</a>, an enterprise and consumer-facing real-time debate and decision platform with 5,000+ users and 2 B2B pilots.
               </li>
               <li>
-                Founder and Executive Director of
+                Founding Executive Director @
                 <a href="https://uptheratios.org" target="_blank" rel="noreferrer">Up the Ratios</a>,
                 a nonprofit expanding STEM access through robotics donations and education
               </li>
               <li>Built and deployed production-grade web and data systems end to end</li>
+              <li>
                 Accepted to Antler US Residency F25 with under 3 percent acceptance rate and
-                potential 500K funding</li>
+                potential 500K funding
+              </li>
               <li>YC Agent Jam 25 third place, in-person competition at Y Combinator SF</li>
             </ul>
           </section>
@@ -310,33 +317,7 @@
             </a>
             <a href="https://linkedin.com/in/vir-sanghavi" target="_blank" rel="noreferrer" aria-label="LinkedIn">
               <span class="sr-only">LinkedIn</span>
-              <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-                <path
-                  d="M7.2 9.6V17.4"
-                  stroke="currentColor"
-                  stroke-width="1.6"
-                  stroke-linecap="round"
-                />
-                <path
-                  d="M7.2 6.9h.01"
-                  stroke="currentColor"
-                  stroke-width="3"
-                  stroke-linecap="round"
-                />
-                <path
-                  d="M11 17.4v-4.2c0-1.5.85-2.45 2.25-2.45 1.35 0 2.05.9 2.05 2.45v4.2"
-                  stroke="currentColor"
-                  stroke-width="1.6"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M11 9.6v7.8"
-                  stroke="currentColor"
-                  stroke-width="1.6"
-                  stroke-linecap="round"
-                />
-              </svg>
+              <img class="icon icon-img" src="/linkedin.png" alt="" aria-hidden="true" />
             </a>
             <a href="https://github.com/VirSanghavi" target="_blank" rel="noreferrer" aria-label="GitHub">
               <span class="sr-only">GitHub</span>
