--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
         line-height: 1.55;
+        font-size: clamp(13px, 1.75vh, 18px);
+        overflow: hidden;
       }
 
       a {
@@ -71,16 +73,19 @@
       }
 
       .wrap {
-        min-height: 100svh;
+        height: 100svh;
         display: flex;
         flex-direction: column;
       }
 
       .container {
         width: 100%;
-        max-width: var(--maxw);
+        max-width: min(1100px, 94vw);
         margin: 0 auto;
-        padding: 28px 18px;
+        padding: clamp(14px, 4vh, 56px) clamp(16px, 4vw, 32px);
+        height: 100%;
+        display: flex;
+        flex-direction: column;
       }
 
       header {
@@ -88,19 +93,19 @@
       }
 
       .avatar {
-        width: 92px;
-        height: 92px;
+        width: clamp(64px, 12vh, 104px);
+        height: clamp(64px, 12vh, 104px);
         border-radius: 999px;
         object-fit: cover;
         display: block;
-        margin: 0 auto 20px;
+        margin: 0 auto clamp(12px, 2.2vh, 20px);
         border: 1px solid var(--border);
         background: #ffffff;
       }
 
       h1 {
         margin: 0;
-        font-size: clamp(2.05rem, 5.2vw, 3.05rem);
+        font-size: clamp(1.75rem, 5vw, 3.25rem);
         line-height: 1.05;
         font-weight: 700;
         letter-spacing: 0.22em;
@@ -108,13 +113,16 @@
       }
 
       .subtitle {
-        margin: 14px 0 0;
-        font-size: 1rem;
+        margin: clamp(10px, 1.8vh, 14px) 0 0;
+        font-size: clamp(0.95rem, 1.9vh, 1.05rem);
         font-weight: 500;
       }
 
       main {
         flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
       }
 
       .section {
@@ -145,11 +153,11 @@
       }
 
       .section + .section {
-        margin-top: 10px;
+        margin-top: clamp(6px, 1.1vh, 10px);
       }
 
       li {
-        margin: 0.45rem 0;
+        margin: 0.4rem 0;
       }
 
       .links-row {
@@ -189,7 +197,7 @@
       }
 
       footer {
-        padding: 26px 0 8px;
+        padding: clamp(10px, 2.5vh, 26px) 0 0;
       }
 
       .social {
@@ -233,26 +241,8 @@
       }
 
       @media (min-width: 720px) {
-        .container {
-          padding: 56px 24px;
-        }
-
-        .avatar {
-          width: 104px;
-          height: 104px;
-        }
-
         h1 {
           letter-spacing: 0.28em;
-        }
-
-        .section {
-          margin-top: 34px;
-        }
-
-        .links-row .btn {
-          min-width: 140px;
-          width: auto;
         }
       }
     </style>
