--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         color: var(--text);
         font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-        line-height: 1.55;
-        font-size: clamp(13px, 1.75vh, 18px);
+        line-height: 1.5;
+        font-size: clamp(14px, 1.15vw, 22px);
         overflow: hidden;
       }
 
@@ -93,8 +93,8 @@
       }
 
       .avatar {
-        width: clamp(64px, 12vh, 104px);
-        height: clamp(64px, 12vh, 104px);
+        width: clamp(64px, 10vmin, 112px);
+        height: clamp(64px, 10vmin, 112px);
         border-radius: 999px;
         object-fit: cover;
         display: block;
@@ -105,7 +105,7 @@
 
       h1 {
         margin: 0;
-        font-size: clamp(1.75rem, 5vw, 3.25rem);
+        font-size: clamp(2rem, 4.4vw, 4.1rem);
         line-height: 1.05;
         font-weight: 700;
         letter-spacing: 0.22em;
@@ -113,16 +113,14 @@
       }
 
       .subtitle {
-        margin: clamp(10px, 1.8vh, 14px) 0 0;
-        font-size: clamp(0.95rem, 1.9vh, 1.05rem);
+        margin: clamp(6px, 1.2vh, 10px) 0 0;
+        font-size: clamp(1rem, 1.35vw, 1.35rem);
         font-weight: 500;
       }
 
       main {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+        flex: 0 0 auto;
+        margin-top: clamp(10px, 2vh, 16px);
       }
 
       .section {
@@ -197,7 +195,14 @@
       }
 
       footer {
-        padding: clamp(10px, 2.5vh, 26px) 0 0;
+        margin-top: auto;
+        padding: clamp(10px, 2.5vh, 22px) 0 0;
+      }
+
+      @media (max-height: 640px) {
+        body {
+          overflow: auto;
+        }
       }
 
       .social {
