--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
         color: var(--text);
         font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-        line-height: 1.5;
-        font-size: clamp(14px, 1.15vw, 22px);
-        overflow: hidden;
+        line-height: 1.55;
       }
 
       a {
@@ -73,19 +71,16 @@
       }
 
       .wrap {
-        height: 100svh;
+        min-height: 100svh;
         display: flex;
         flex-direction: column;
       }
 
       .container {
         width: 100%;
-        max-width: min(1100px, 94vw);
+        max-width: var(--maxw);
         margin: 0 auto;
-        padding: clamp(14px, 4vh, 56px) clamp(16px, 4vw, 32px);
-        height: 100%;
-        display: flex;
-        flex-direction: column;
+        padding: 28px 18px;
       }
 
       header {
@@ -93,19 +88,19 @@
       }
 
       .avatar {
-        width: clamp(64px, 10vmin, 112px);
-        height: clamp(64px, 10vmin, 112px);
+        width: 92px;
+        height: 92px;
         border-radius: 999px;
         object-fit: cover;
         display: block;
-        margin: 0 auto clamp(12px, 2.2vh, 20px);
+        margin: 0 auto 20px;
         border: 1px solid var(--border);
         background: #ffffff;
       }
 
       h1 {
         margin: 0;
-        font-size: clamp(2rem, 4.4vw, 4.1rem);
+        font-size: clamp(2.05rem, 5.2vw, 3.05rem);
         line-height: 1.05;
         font-weight: 700;
         letter-spacing: 0.22em;
@@ -113,14 +108,13 @@
       }
 
       .subtitle {
-        margin: clamp(6px, 1.2vh, 10px) 0 0;
-        font-size: clamp(1rem, 1.35vw, 1.35rem);
+        margin: 14px 0 0;
+        font-size: 1rem;
         font-weight: 500;
       }
 
       main {
-        flex: 0 0 auto;
-        margin-top: clamp(10px, 2vh, 16px);
+        flex: 1;
       }
 
       .section {
@@ -151,11 +145,11 @@
       }
 
       .section + .section {
-        margin-top: clamp(6px, 1.1vh, 10px);
+        margin-top: 10px;
       }
 
       li {
-        margin: 0.4rem 0;
+        margin: 0.45rem 0;
       }
 
       .links-row {
@@ -195,14 +189,7 @@
       }
 
       footer {
-        margin-top: auto;
-        padding: clamp(10px, 2.5vh, 22px) 0 0;
-      }
-
-      @media (max-height: 640px) {
-        body {
-          overflow: auto;
-        }
+        padding: 26px 0 8px;
       }
 
       .social {
@@ -246,8 +233,26 @@
       }
 
       @media (min-width: 720px) {
+        .container {
+          padding: 56px 24px;
+        }
+
+        .avatar {
+          width: 104px;
+          height: 104px;
+        }
+
         h1 {
           letter-spacing: 0.28em;
+        }
+
+        .section {
+          margin-top: 34px;
+        }
+
+        .links-row .btn {
+          min-width: 140px;
+          width: auto;
         }
       }
     </style>
