--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         color: var(--text);
         font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-        line-height: 1.55;
+        line-height: 1.5;
+        font-size: clamp(14px, 1.15vw, 22px);
+        overflow: hidden;
       }
 
       a {
@@ -71,16 +73,19 @@
       }
 
       .wrap {
-        min-height: 100svh;
+        height: 100svh;
         display: flex;
         flex-direction: column;
       }
 
       .container {
         width: 100%;
-        max-width: var(--maxw);
+        max-width: min(1100px, 94vw);
         margin: 0 auto;
-        padding: 28px 18px;
+        padding: clamp(14px, 4vh, 56px) clamp(16px, 4vw, 32px);
+        height: 100%;
+        display: flex;
+        flex-direction: column;
       }
 
       header {
@@ -88,19 +93,19 @@
       }
 
       .avatar {
-        width: 92px;
-        height: 92px;
+        width: clamp(64px, 10vmin, 112px);
+        height: clamp(64px, 10vmin, 112px);
         border-radius: 999px;
         object-fit: cover;
         display: block;
-        margin: 0 auto 20px;
+        margin: 0 auto clamp(12px, 2.2vh, 20px);
         border: 1px solid var(--border);
         background: #ffffff;
       }
 
       h1 {
         margin: 0;
-        font-size: clamp(2.05rem, 5.2vw, 3.05rem);
+        font-size: clamp(2rem, 4.4vw, 4.1rem);
         line-height: 1.05;
         font-weight: 700;
         letter-spacing: 0.22em;
@@ -108,13 +113,14 @@
       }
 
       .subtitle {
-        margin: 14px 0 0;
-        font-size: 1rem;
+        margin: clamp(6px, 1.2vh, 10px) 0 0;
+        font-size: clamp(1rem, 1.35vw, 1.35rem);
         font-weight: 500;
       }
 
       main {
-        flex: 1;
+        flex: 0 0 auto;
+        margin-top: clamp(10px, 2vh, 16px);
       }
 
       .section {
@@ -145,11 +151,11 @@
       }
 
       .section + .section {
-        margin-top: 10px;
+        margin-top: clamp(6px, 1.1vh, 10px);
       }
 
       li {
-        margin: 0.45rem 0;
+        margin: 0.4rem 0;
       }
 
       .links-row {
@@ -188,8 +194,57 @@
         background: var(--hover);
       }
 
+      .tilt-menu {
+        position: relative;
+        display: inline-block;
+      }
+
+      .tilt-menu-main {
+        text-decoration: underline;
+        text-underline-offset: 0.18em;
+      }
+
+      .tilt-menu-panel {
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        transform: translateX(-50%);
+        margin-top: 6px;
+        padding: 6px 10px;
+        background: #ffffff;
+        border: 1px solid var(--border);
+        border-radius: 8px;
+        min-width: 190px;
+        font-size: 0.88rem;
+        text-align: left;
+        display: none;
+        z-index: 10;
+      }
+
+      .tilt-menu-panel a {
+        display: block;
+        padding: 4px 0;
+        text-decoration: none;
+      }
+
+      .tilt-menu-panel a:hover {
+        background: var(--hover);
+      }
+
+      .tilt-menu:hover .tilt-menu-panel,
+      .tilt-menu:focus-within .tilt-menu-panel {
+        display: block;
+      }
+
       footer {
-        padding: 26px 0 8px;
+        margin-top: auto;
+        padding: clamp(10px, 2.5vh, 22px) 0 0;
+      }
+
+      @media (max-height: 640px) {
+        body {
+          overflow: auto;
+        }
       }
 
       .social {
@@ -233,26 +288,8 @@
       }
 
       @media (min-width: 720px) {
-        .container {
-          padding: 56px 24px;
-        }
-
-        .avatar {
-          width: 104px;
-          height: 104px;
-        }
-
         h1 {
           letter-spacing: 0.28em;
-        }
-
-        .section {
-          margin-top: 34px;
-        }
-
-        .links-row .btn {
-          min-width: 140px;
-          width: auto;
         }
       }
     </style>
@@ -271,7 +308,30 @@
           <section class="section">
             <ul>
               <li>
-                CEO/co-founder @ <a href="https://data.tilt.vote" target="_blank" rel="noreferrer">Tilt</a>, an enterprise and consumer-facing real-time debate and decision platform with 5,000+ users and 2 B2B pilots.
+                CEO/co-founder @
+                <span class="tilt-menu">
+                  <a
+                    class="tilt-menu-main"
+                    href="https://tilt.vote"
+                    target="_blank"
+                    rel="noreferrer"
+                    >Tilt</a
+                  >
+                  <span class="tilt-menu-panel" role="menu">
+                    <a href="https://tilt.vote" target="_blank" rel="noreferrer" role="menuitem"
+                      >Consumer social: tilt.vote</a
+                    >
+                    <a
+                      href="https://data.tilt.vote"
+                      target="_blank"
+                      rel="noreferrer"
+                      role="menuitem"
+                      >Tilt Analytics: data.tilt.vote</a
+                    >
+                  </span>
+                </span>
+                , an enterprise and consumer-facing real-time debate and decision platform with
+                5,000+ users and 2 B2B pilots.
               </li>
               <li>
                 Founding Executive Director @
