--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
         top: 100%;
         left: 50%;
         transform: translateX(-50%);
-        margin-top: 6px;
-        padding: 6px 10px;
+        padding: 8px 10px 6px;
         background: #ffffff;
         border: 1px solid var(--border);
         border-radius: 8px;
