--- a/index.html
+++ b/index.html
@@ -339,10 +339,10 @@
               </li>
               <li>Built and deployed production-grade web and data systems end to end</li>
               <li>
-                Accepted to Antler US Residency F25 with under 3 percent acceptance rate and
-                potential 500K funding
+                Accepted to Antler US Residency F25 with under 3% acceptance rate and
+                potential $500K funding
               </li>
-              <li>YC Agent Jam 25 third place, in-person competition at Y Combinator SF</li>
+              <li>YC Agent Jam 25 3rd place, in-person competition at Y Combinator SF</li>
             </ul>
           </section>
         </main>
