--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
           <section class="section">
             <ul>
               <li>
-                CEO/co-founder @
+                CEO/CTO/co-founder @
                 <span class="tilt-menu">
                   <a
                     class="tilt-menu-main"
