--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 Accepted to Antler US Residency F25 with under 3% acceptance rate and
                 potential $500K funding
               </li>
-              <li>YC Agent Jam 25 3rd place, in-person competition at Y Combinator SF</li>
+              <li>YC Agent Jam '25 third place, in-person competition at Y Combinator SF</li>
             </ul>
           </section>
         </main>
